# robots_for_consumers

./: README.md  pyproject.toml
R4C/: .env.example
R4C/R4C/: settings.py  urls.py
R4C/customers/migrations/: 0001_initial.py
R4C/orders/: forms.py  views.py
R4C/orders/migrations/: 0001_initial.py
R4C/robots/: serializers.py  validators.py  views.py
R4C/robots/migrations/: 0001_initial.py
R4C/templates/orders/: complete_order.html  create_order.html  waiting_list.html
R4C/templates/robots/: export_to_xls.html
R4C/waitlist/: models.py  send_messages.py
R4C/waitlist/migrations/: 0001_initial.py
